1998-01-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ClassDisplayLabel.[hm], VarProbeLabel.[hm]: New files.
	
	* Widget.[hm]: Remove enableRelif, setBorderWidth:,
	setupWindowExitColor setupWindowExitColor, and focus.

	* Makefile (OBJECTS,HEADERS): Add ClassDisplayLabel and VarProbeLabel.
	(ClassDisplayLabel.o, VarProbeLabel.o): Add.

	* Label.m: Remove anchorEast, anchorWest, and colorBlue.

	* Label.h: Likewise.  Declare createEnd.

	* Frame.m ([Frame -setBorderWidth:], [Frame -setReliefFlag:]): New
	methods.
	([Frame -createEnd]): Create relief if reliefFlag is set.
	Set borderwidth if non-zero.

	* Frame.h (Frame):  Add borderWidth and reliefFlag.  Declare
	setters.

	* CompleteProbeDisplayLabel.m ([CompleteProbeDisplayLabel
	-createEnd]): Remove calls to anchorWest and colorBlue, they are
	now inherited.  Replace calls to setupWindow{Entry,Exit}Color with
	direct calls to globalTkInterp; those methods were only used
	here, and therefore have been removed.

	* CompleteProbeDisplayLabel.h: Include ClassDisplayLabel.h instead
	of Label.h. (CompleteProbeDisplayLabel): Inherit from
	ClassDisplayLabel.

	* tkobjc.m: Don't include unistd.h or string.h.
	(ensureBltSupportFiles): Remove.
	(initTkObjc): Don't append $blt_library to auto_path.

	* TkExtra.m: Include unistd.h and string.h.
	(ensureBltSupportFiles): Moved from tkobjc.m.
	([TkExtra -preInitWithArgc:argv:]): Check to see that Blt_Init
	returns TCL_OK; possibily more strict.  Use getBltFullVersion to
	see BLT is 8.0-unoff.  In that case, import from blt::.  Call
	ensureBltSupportFiles and append $blt_library to autopath.
	([TkExtra -getBltFullVersion]): New method.
	([TkExtra -newBLTp]): Return NO in the case of 8.0-unoff; it uses
	the BLT 2.1 semantics.

	* TkExtra.h: Declare getBltFullVersion.

1998-01-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* SimpleProbeDisplayHideButton.m, ClassDisplayHideButton.m, tkobjc.m:
	Include tkobjc/common.h instead of tkobjc/control.h.
